# MTI805

./: README.md  pyproject.toml
Geoffroy/: Depth_video_app.py  live.py
Geoffroy/src/: Connection_ai.py  Connection_metric.py
assets/: camera_calibration.npz  camera_calibration_1.npz  little_less_wrong_camera_calibration.npz  wrong_camera_calibration.npz
metric_depth/: depth_to_pointcloud.py
notebooks/: calibration.ipynb  calibration.py  julien.ipynb  live_demo.py  pipeline.ipynb
