[tool.poetry]
name = "mti805"
version = "0.1.0"
description = ""
authors = ["Julien Robitaille <julienrobitailledev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
transformers = "^4.38.2"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
torch = "^2.2.1"
pillow = "^10.2.0"
open3d = "^0.18.0"
scikit-learn = "^1.4.1.post1"
addict = "^2.4.0"
pandas = "^2.2.1"
timm = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
